--- a/python_analys/sem1/sem1.ipynb
+++ b/python_analys/sem1/sem1.ipynb
@@ -1,18 +1,223 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 1\n",
+    "На складе лежат разные фрукты в разном количестве.\n",
+    "Нужно написать функцию, которая на вход принимает любое количество названий фруктов и их количество, а возвращает общее количество фруктов на складе"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "123"
+    "fruits={'яблоко':15,'киви':15,'арбуз':20}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'общее количество фруктов = 50'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def func_sum_fruits (dict_fruits: dict) -> int:\n",
+    "    count=0\n",
+    "    for key in dict_fruits:\n",
+    "        count=count+(dict_fruits[key])\n",
+    "    return f\"общее количество фруктов = {count}\"\n",
+    "func_sum_fruits(fruits)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 2\n",
+    "Дан список с затратами на рекламу. Но в данных есть ошибки, некоторые затраты имеют отрицательную величину. Удалите такие значения из списка и посчитайте суммарные затраты\n",
+    "[100, 125, -90, 345, 655, -1, 0, 200]\n",
+    "Используйте list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "costs=[100, 125, -90, 345, 655, -1, 0, 200]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1425"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def delete_mistake(costs : list) -> int:\n",
+    "    new_list=[]\n",
+    "    new_list=[value for value in costs if value>=0]\n",
+    "    return sum(new_list) \n",
+    "delete_mistake(costs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Задача 3\n",
+    "### 3.1 Найдите, какая выручка у компании в ноябре. Используйте list comprehensions\n",
+    "Даны два списка.\n",
+    "Дата покупки\n",
+    "['2021-09-14', '2021-12-15', '2021-09-08', '2021-12-05', '2021-10-09', '2021-09-30', '2021-12-22', '2021-11-29', '2021-12-24', '2021-11-26', '2021-10-27', '2021-12-18', '2021-11-09', '2021-11-23', '2021-09-27', '2021-10-02', '2021-12-27', '2021-09-20', '2021-12-13', '2021-11-01', '2021-11-09', '2021-12-06', '2021-12-08', '2021-10-09', '2021-10-31', '2021-09-30', '2021-11-09', '2021-12-13', '2021-10-26', '2021-12-09']\n",
+    "Суммы покупок по датам\n",
+    "[1270, 8413, 9028, 3703, 5739, 4095, 295, 4944, 5723, 3701, 4471, 651, 7037, 4274, 6275, 4988, 6930, 2971, 6592, 2004, 2822, 519, 3406, 2732, 5015, 2008, 316, 6333, 5700, 2887]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Date_sale=['2021-09-14', '2021-12-15', '2021-09-08', '2021-12-05', '2021-10-09', '2021-09-30', '2021-12-22', '2021-11-29', '2021-12-24', '2021-11-26', '2021-10-27', '2021-12-18', '2021-11-09', '2021-11-23', '2021-09-27', '2021-10-02', '2021-12-27', '2021-09-20', '2021-12-13', '2021-11-01', '2021-11-09', '2021-12-06', '2021-12-08', '2021-10-09', '2021-10-31', '2021-09-30', '2021-11-09', '2021-12-13', '2021-10-26', '2021-12-09']\n",
+    "Sum_date=[1270, 8413, 9028, 3703, 5739, 4095, 295, 4944, 5723, 3701, 4471, 651, 7037, 4274, 6275, 4988, 6930, 2971, 6592, 2004, 2822, 519, 3406, 2732, 5015, 2008, 316, 6333, 5700, 2887]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4944, 3701, 7037, 4274, 2004, 2822, 316]\n",
+      "25098\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_sale=[Sum_date[i] for i in range(len(Sum_date)) if Date_sale[i][5:7] == '11' ]\n",
+    "print(sum_sale) \n",
+    "print(sum(sum_sale)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Найдите выручку компании в зависимости от месяца\n",
+    "Для этого напишите функцию, которая на вход принимает список с датами и список с выручкой, а на выходе словарь, где ключи - это месяцы, а значения - это выручка.\n",
+    "Используйте аннотирование типов."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'datetime.datetime'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "data_temp = datetime.datetime.strptime('2021-09-14',\"%Y-%m-%d\")\n",
+    "print(type(data_temp))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{9: 21552, 12: 38860, 10: 22906, 11: 15239}\n",
+      "сумма продаж за 9  = 21552\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "def dict_sales(dict_date : list, dict_cost : list) -> dict:\n",
+    "    dict_common={dict_date[i]:dict_cost[i] for i in range(len(dict_date))}\n",
+    "    # print(dict_common)\n",
+    "    dict_common_month={}\n",
+    "    list_month=[]\n",
+    "    for key in dict_common:\n",
+    "        # print(key)\n",
+    "        data_temp = datetime.datetime.strptime(key,\"%Y-%m-%d\")\n",
+    "        if data_temp.month not in dict_common_month:\n",
+    "            dict_common_month.update({data_temp.month:dict_common[key]}) \n",
+    "        else:\n",
+    "            temp=dict_common_month.get(data_temp.month)\n",
+    "            dict_common_month.update({data_temp.month:dict_common[key]+temp})  \n",
+    " \n",
+    "    return dict_common_month\n",
+    "        \n",
+    "dict_result=dict_sales(Date_sale,Sum_date)\n",
+    "print(dict_result)\n",
+    "month_num=9\n",
+    "print(f\"сумма продаж за {month_num}  = {dict_result.get(month_num)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
