--- a/python_analys/sem3/sem3_dz1.ipynb
+++ b/python_analys/sem3/sem3_dz1.ipynb
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1599,7 +1599,7 @@
        "      <th>max</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>grade</th>\n",
+       "      <th>condition</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1608,105 +1608,56 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>142000</td>\n",
-       "      <td>142000</td>\n",
-       "      <td>142000</td>\n",
+       "      <td>78000</td>\n",
+       "      <td>334432</td>\n",
+       "      <td>1500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>80000</td>\n",
+       "      <td>327287</td>\n",
+       "      <td>2555000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>75000</td>\n",
-       "      <td>205667</td>\n",
-       "      <td>280000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>80000</td>\n",
-       "      <td>214381</td>\n",
-       "      <td>435000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>78000</td>\n",
-       "      <td>248524</td>\n",
-       "      <td>795000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>82000</td>\n",
-       "      <td>301920</td>\n",
-       "      <td>1200000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>90000</td>\n",
-       "      <td>402590</td>\n",
-       "      <td>2050000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>140000</td>\n",
-       "      <td>542853</td>\n",
-       "      <td>3070000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>230000</td>\n",
-       "      <td>773513</td>\n",
-       "      <td>2700000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>316000</td>\n",
-       "      <td>1071771</td>\n",
-       "      <td>3600000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>420000</td>\n",
-       "      <td>1496842</td>\n",
+       "      <td>542013</td>\n",
        "      <td>7062500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>835000</td>\n",
-       "      <td>2191222</td>\n",
-       "      <td>5350000</td>\n",
+       "      <th>4</th>\n",
+       "      <td>89000</td>\n",
+       "      <td>521200</td>\n",
+       "      <td>7700000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>1780000</td>\n",
-       "      <td>3709615</td>\n",
-       "      <td>7700000</td>\n",
+       "      <th>5</th>\n",
+       "      <td>110000</td>\n",
+       "      <td>612418</td>\n",
+       "      <td>3650000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        price                \n",
-       "          min    mean     max\n",
-       "grade                        \n",
-       "1      142000  142000  142000\n",
-       "3       75000  205667  280000\n",
-       "4       80000  214381  435000\n",
-       "5       78000  248524  795000\n",
-       "6       82000  301920 1200000\n",
-       "7       90000  402590 2050000\n",
-       "8      140000  542853 3070000\n",
-       "9      230000  773513 2700000\n",
-       "10     316000 1071771 3600000\n",
-       "11     420000 1496842 7062500\n",
-       "12     835000 2191222 5350000\n",
-       "13    1780000 3709615 7700000"
+       "           price               \n",
+       "             min   mean     max\n",
+       "condition                      \n",
+       "1          78000 334432 1500000\n",
+       "2          80000 327287 2555000\n",
+       "3          75000 542013 7062500\n",
+       "4          89000 521200 7700000\n",
+       "5         110000 612418 3650000"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('grade').agg({'price':['min','mean','max']}).sort_values('grade')"
+    "df.groupby('condition').agg({'price':['min','mean','max']}).sort_values('condition')"
    ]
   },
   {
@@ -1718,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1759,7 @@
        "           4       135"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
